--- a/style.css
+++ b/style.css
@@ -1,2 +1,3 @@
 body {
-    background-image: url("./assets/Images/repeated-square.png");
+    background-image: url("./assets/Images/geometry.png");
+}
