sticky footer added

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
     background-image: url("./assets/Images/geometry.png");
 }
+html,
+body {
+  height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+}
+
+#sticky-footer {
+  flex-shrink: none;
+}
